# ChangeLog for dev-perl/Linux-Smaps
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Smaps/ChangeLog,v 1.6 2011/03/25 17:00:51 idl0r Exp $

  25 Mar 2011; Christian Ruppert <idl0r@gentoo.org> Linux-Smaps-0.06.ebuild:
  Improve kernel config check.

  23 Mar 2011; Christian Ruppert <idl0r@gentoo.org> Linux-Smaps-0.06.ebuild:
  Add check for CONFIG_MMU.

  01 May 2009; Torsten Veller <tove@gentoo.org> -Linux-Smaps-0.05.ebuild:
  Cleanup

*Linux-Smaps-0.06 (18 Jun 2008)

  18 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
  +Linux-Smaps-0.06.ebuild:
  Version bump (committing smem now).

  19 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
  Linux-Smaps-0.05.ebuild:
  Add ~amd64 keyword.

*Linux-Smaps-0.05 (19 Nov 2007)

  19 Nov 2007; Christian Hartmann <ian@gentoo.org> +metadata.xml,
  +Linux-Smaps-0.05.ebuild:
  New package; bug #199567
