@@ -2,17 +2,15 @@
 Hash: SHA256
 
 DIST Linux-Smaps-0.06.tar.gz 27030 RMD160 2bd82884ce0c42551455b7dadc2b784fd10f77ed SHA1 d3395b41a228ff1eab9da86b9fe5fd01a517c830 SHA256 8b0678698c465080edb7e47f3f40f405c78f661454f706007dc2d722ab4073cd
+DIST Linux-Smaps-0.07.tar.gz 24585 RMD160 b23c95ef55435acdf965a261c5f2656f9eb0611c SHA1 1f63bd30912a6a804395772bd7ba855763e051d8 SHA256 45a791c6e12e0cf541bfc4404122e6b731e9028ffa4ab107e1a13d66012e40e0
 EBUILD Linux-Smaps-0.06.ebuild 535 RMD160 e0bbb17d30e175651e96f17bd58acc5c33620047 SHA1 2149f37b8eab6f1198423a50052a80823a39fd05 SHA256 5fe66dbe7a43117d3852bbe42b18cc22823ade952dad8904f031eb9382f956f1
-MISC ChangeLog 923 RMD160 e7ec3a8aec9b857e18448a307c3c6ef118c6c4e7 SHA1 7faf5374eb99233f9f4858528f7323389db75bce SHA256 dc4f4f778fe87457ecbd7ea2200b1ecb294f6eb7e91bef9320aa08ebf358875c
+EBUILD Linux-Smaps-0.70.0.ebuild 451 RMD160 6b469c1900f27120ef99ee129a5264e6ef09f026 SHA1 aec5cec8cc0a201a3db577b611c5ba058df9c6ab SHA256 8caef7dec31a5cf7591abf154bb9ce8bd8271c9e7d7b2f1e7047b53a1642a08c
+MISC ChangeLog 1049 RMD160 f6b4d9c072dc2a32a5cd5a9ead69497d862bc500 SHA1 24ae54b3dd6df838458c2e895385f40b1c7b6b49 SHA256 768a6d5e9580e9a6e623b28577c593dab67ea5fd3e80dbfb1670cf2d68c35970
 MISC metadata.xml 237 RMD160 c91c13d2a32ba9c27b164e49a013ab64446e2924 SHA1 98d1f94efae186b4ca405242bd929600ba030a01 SHA256 236b16f18542e9be482dc8b2340b4b7288940052de4b921b6e1245ccae9ca890
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBCAAGBQJNjMpIAAoJEMOx0zmdw4Z13qkH/1dBoY+Ao0f11SU5NngQiRNZ
-J1/1GnNCEX2IdxGoqmm2AEN2R5sBgaOyJVz2UVqyPru1d1UzMT/nWcSXss028jWP
-TNQzvoPSCDr2E8OTxPRePR503aG/pbao9eMAPDPoEN9nsn+IYQ3pVEKIYPFniMxI
-+B/Zmkf2M0kbr956FeLeduMUdgrZwtTne3nkoAb3iseOV107iBFotiyMxAmjiTmf
-yhS+aI6+pPszP1+fz8UgcysL32AgOL9L92e/A+iNc/7LrfEGTzMPKcHNNiBozXRF
-ATMjNrHrSS93kmM/VzH9kJQZU0iL+HLjjDqIX9PlshrLoxUhZTwIcxMxALgg0KE=
-=q+no
+iEYEAREIAAYFAk2SzlcACgkQV3J2n04EauyisgCgrmFIX0FRO0jZZ2UJqC5YjXPW
+SR8AmgOzQAE7csJZXAe94oyQflNSjAZY
+=9J0U
 -----END PGP SIGNATURE-----
