@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Linux-Smaps
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Smaps/ChangeLog,v 1.6 2011/03/25 17:00:51 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Smaps/ChangeLog,v 1.7 2011/03/30 06:31:43 tove Exp $
+
+*Linux-Smaps-0.70.0 (30 Mar 2011)
+
+  30 Mar 2011; Torsten Veller <tove@gentoo.org> +Linux-Smaps-0.70.0.ebuild:
+  Version bump
 
   25 Mar 2011; Christian Ruppert <idl0r@gentoo.org> Linux-Smaps-0.06.ebuild:
   Improve kernel config check.
